--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@angular/router": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "@swimlane/ngx-datatable": "^11.0.4",
-    "@tinymce/tinymce-angular": "^1.0.5",
     "angular-bootstrap-md": "^5.0.5",
     "angular-froala-wysiwyg": "^2.7.5",
     "angular2-chartjs": "^0.4.1",
+    "angular2-image-upload": "^1.0.0-rc.0",
     "angular2-jwt": "^0.2.3",
     "angular2-notifications": "^0.7.4",
     "bootstrap": "^4.0.0-beta",
